Veränderung an Spielerseite

--- a/Spieler.html
+++ b/Spieler.html
@@ -4,14 +4,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link href="styles.css" rel="stylesheet"/>
 </head>
 <body>
     <header>
         <h1>Top Spieler der NBA</h1>
     </header>
     <footer>
-        <li><a href="Spieler.html">Zu den besten Spielern der NBA</a></li>
-        <li><a href="Teams.html">Zu den besten Teams</a></li>
+        <nav>
+            <ul>
+                <li><a href="Spieler.html">Zu den besten Spielern der NBA</a></li>
+                <li><a href="index.html">Zurück zu unserer Homepage</a></li>
+                <li><a href="Teams.html">Zu den besten Teams</a></li>
+            </ul>
+        </nav>
     </footer>
 </body>
 </html>
