Mein erster Commit

--- a/impressum.html
+++ b/impressum.html
@@ -22,7 +22,7 @@
 <nav>
 <ul>
 <li><a href="index.html">Zurück zu unserer Homepage</a></li>
-<li><a href="Spieler.html">Zu den besten Spielern der NBA</a></li>
+<li><a href="Spieler.html">Zu den besten Legenden der NBA</a></li>
 <li><a href="Teams.html">Zu den besten Teams</a></li>
 </ul>
 </nav>
