--- a/Spieler.html
+++ b/Spieler.html
@@ -8,8 +8,30 @@
 </head>
 <body>
     <header>
-        <h1>Top Spieler der NBA</h1>
+        <h1>Die größten Legenden der NBA</h1>
     </header>
+    <main>
+        <section>
+            <h2> Die besten Spieler aller Zeiten</h2>
+            <br>
+            <h3>Die besten Point Guards aller Zeiten</h3>
+        <ul>
+            <li>Magic Johnson wahrscheinlich der beste Point Guard jemals mit 5 Championships, 3 MVPs und Passfähigkeiten wie kein anderer</li>
+            <li>Stephen Curry macht Magic den 1. Platz schon streitig mit seinen 4 Championships und 2 MVPs, abgesehen davon, dass er das Spiel mit seinen Wurf-skills revolutionierte</li>
+            <li>John Stockton sichert sich den hart umstrittenen 3. Platz für uns mit den meisten Assists aller Zeiten</li>
+        </ul> 
+        <br>
+        <h2>Die besten Shooting Guards aller Zeiten</h2>
+        <ul>
+            <li>Michael Jordan ist die unangefochtene 1 auf seiner Position und auch für viele der Beste aller Zeiten, dank seiner vielen Erfolge und Leistungen</li>
+            <li>Kobe Bryant landet mit seiner legendären Mamba Mentality hinter seinem Idol MJ. Durch seinen langanhaltenden Erfolg mit den Lakers sichert er sich Platz 2</li>
+            <li>Dwyane Wade ist unser Platz 3. Die Miami Heat Legende überzeugt mit seiner unglaublichen Athletik und Explosivität </li>
+         </ul>
+        <br>
+        <h2>Die besten Small-Forwards aller Zeiten</h2>
+        <ul></ul>
+        </section>
+    </main>
     <footer>
         <nav>
             <ul>
