--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <ul>
 <li><a href="impressum.html">Impressum</a></li>
 <li><a href="Teams.html">Teams</a></li>
-<li><a href="Spieler.html">Top-Spieler</a></li>
+<li><a href="Spieler.html">Legenden</a></li>
 </ul>
 </nav>
 </header>
