--- a/Spieler.html
+++ b/Spieler.html
@@ -12,7 +12,7 @@
     </header>
     <main>
         <section>
-            <h2> Die besten Spieler aller Zeiten</h2>
+            <h1> Die besten Spieler aller Zeiten</h1>
             <br>
             <h3>Die besten Point Guards aller Zeiten</h3>
         <ul>
@@ -21,21 +21,21 @@
             <li>John Stockton sichert sich den hart umstrittenen 3. Platz für uns mit den meisten Assists aller Zeiten</li>
         </ul> 
         <br>
-        <h2>Die besten Shooting Guards aller Zeiten</h2>
+        <h3>Die besten Shooting Guards aller Zeiten</h3>
         <ul>
             <li>Michael Jordan ist die unangefochtene 1 auf seiner Position und auch für viele der Beste aller Zeiten, dank seiner vielen Erfolge und Leistungen</li>
             <li>Kobe Bryant landet mit seiner legendären Mamba Mentality hinter seinem Idol MJ. Durch seinen langanhaltenden Erfolg mit den Lakers sichert er sich Platz 2</li>
             <li>Dwyane Wade ist unser Platz 3. Die Miami Heat Legende überzeugt mit seiner unglaublichen Athletik und Explosivität </li>
          </ul>
         <br>
-        <h2>Die besten Small-Forwards aller Zeiten</h2>
+        <h3>Die besten Small-Forwards aller Zeiten</h3>
         <ul></ul>
         </section>
     </main>
     <footer>
         <nav>
             <ul>
-                <li><a href="Spieler.html">Zu den besten Spielern der NBA</a></li>
+                <li><a href="impressum.html">Zum Impressum</a></li>
                 <li><a href="index.html">Zurück zu unserer Homepage</a></li>
                 <li><a href="Teams.html">Zu den besten Teams</a></li>
             </ul>
