--- a/Spieler.html
+++ b/Spieler.html
@@ -15,21 +15,39 @@
             <h1> Die besten Spieler aller Zeiten</h1>
             <br>
             <h3>Die besten Point Guards aller Zeiten</h3>
-        <ul>
+        <ol>
             <li>Magic Johnson wahrscheinlich der beste Point Guard jemals mit 5 Championships, 3 MVPs und Passfähigkeiten wie kein anderer</li>
             <li>Stephen Curry macht Magic den 1. Platz schon streitig mit seinen 4 Championships und 2 MVPs, abgesehen davon, dass er das Spiel mit seinen Wurf-skills revolutionierte</li>
             <li>John Stockton sichert sich den hart umstrittenen 3. Platz für uns mit den meisten Assists aller Zeiten</li>
-        </ul> 
+        </ol> 
         <br>
         <h3>Die besten Shooting Guards aller Zeiten</h3>
-        <ul>
+        <ol>
             <li>Michael Jordan ist die unangefochtene 1 auf seiner Position und auch für viele der Beste aller Zeiten, dank seiner vielen Erfolge und Leistungen</li>
             <li>Kobe Bryant landet mit seiner legendären Mamba Mentality hinter seinem Idol MJ. Durch seinen langanhaltenden Erfolg mit den Lakers sichert er sich Platz 2</li>
             <li>Dwyane Wade ist unser Platz 3. Die Miami Heat Legende überzeugt mit seiner unglaublichen Athletik und Explosivität </li>
-         </ul>
+        </ol>
         <br>
         <h3>Die besten Small-Forwards aller Zeiten</h3>
-        <ul></ul>
+        <ol>
+            <li> LeBron James sichert sich Platz 1 mit unzähligen Rekorden in allen möglichen Kategorien und der unglaublichen Langleblichkeit seiner Fähigkeiten</li>
+            <li> Larry Bird dominiert die Liste der Small Forwards gleich wie die NBA in den 80er Jahren mit seinen 3 MVPs hintereinander</li>
+            <li> Kevin Durant macht seinen Verteidigern mit seinen vielfälltigen Scoring-Fähigkeiten die sonst niemand mit seiner Größe hat, die Hölle heiß</li>
+        </ol> 
+        <br>
+        <h3>Die besten Power-Forwards aller Zeiten</h3>
+        <ol>
+            <li> Das Mittelstück der langen Spurs-Dynastie Tim Duncan dominierte als einer der besten defensiven Spieler aller Zeiten die NBA mehrere Jahre</li>
+            <li> Dirk Nowitzki revolutionierte das Spiel auf seiner Position und sorgte dafür, dass heutzutage auch Riesen den Ball aus weiter Distanz durch Netz bringen</li>
+            <li> Kevin Garnetts Vertaidigung machte den Angreifern für ganze 21 Saisons das Leben schwer, was jedoch nur für 1 DPOY-Award reichte</li>
+        </ol>
+        <br>
+        <h3>Die besten Centers aller Zeiten</h3>
+        <ol>
+            <li> Kareem Abdul-Jabbar hat mit ganzen 6 MVPs die meisten der Geschichte, noch dazu besaß er bis vor kurzem den Rekord für die meisten Punkte aller Zeiten</li>
+            <li> Shaquille O'Neal dominierte seit dem er in der NBA ist. Seine Dominanz reichte für 4 Championships, 1 MVP und sogar ein paar kaputte Körbe</li>
+            <li> Wilt Chamberlains Statistiken sind so gut, dass viele sie für Fake halten. Er erzielte mit 100 Punkten die meisten in einem Spiel jemals</li>
+        </ol>  
         </section>
     </main>
     <footer>
