--- a/Spieler.html
+++ b/Spieler.html
@@ -16,7 +16,7 @@
             <br>
             <h3>Die besten Point Guards aller Zeiten</h3>
         <ol>
-            <li>Magic Johnson wahrscheinlich der beste Point Guard jemals mit 5 Championships, 3 MVPs und Passfähigkeiten wie kein anderer</li>
+            <li>Magic Johnson ist wahrscheinlich der beste Point Guard jemals mit 5 Championships, 3 MVPs und Passfähigkeiten wie kein Anderer</li>
             <li>Stephen Curry macht Magic den 1. Platz schon streitig mit seinen 4 Championships und 2 MVPs, abgesehen davon, dass er das Spiel mit seinen Wurf-skills revolutionierte</li>
             <li>John Stockton sichert sich den hart umstrittenen 3. Platz für uns mit den meisten Assists aller Zeiten</li>
         </ol> 
@@ -37,7 +37,7 @@
         <br>
         <h3>Die besten Power-Forwards aller Zeiten</h3>
         <ol>
-            <li> Das Mittelstück der langen Spurs-Dynastie Tim Duncan dominierte als einer der besten defensiven Spieler aller Zeiten die NBA mehrere Jahre</li>
+            <li> Das Mittelstück der langen Spurs-Dynastie Tim Duncan dominierte als einer der besten defensiven Spieler aller Zeiten die NBA für mehrere Jahre</li>
             <li> Dirk Nowitzki revolutionierte das Spiel auf seiner Position und sorgte dafür, dass heutzutage auch Riesen den Ball aus weiter Distanz durch Netz bringen</li>
             <li> Kevin Garnetts Vertaidigung machte den Angreifern für ganze 21 Saisons das Leben schwer, was jedoch nur für 1 DPOY-Award reichte</li>
         </ol>
@@ -45,7 +45,7 @@
         <h3>Die besten Centers aller Zeiten</h3>
         <ol>
             <li> Kareem Abdul-Jabbar hat mit ganzen 6 MVPs die meisten der Geschichte, noch dazu besaß er bis vor kurzem den Rekord für die meisten Punkte aller Zeiten</li>
-            <li> Shaquille O'Neal dominierte seit dem er in der NBA ist. Seine Dominanz reichte für 4 Championships, 1 MVP und sogar ein paar kaputte Körbe</li>
+            <li> Shaquille O'Neal dominierte seitdem er in der NBA ist. Seine Dominanz reichte für 4 Championships, 1 MVP und sogar ein paar kaputte Körbe</li>
             <li> Wilt Chamberlains Statistiken sind so gut, dass viele sie für Fake halten. Er erzielte mit 100 Punkten die meisten in einem Spiel jemals</li>
         </ol>  
         </section>
