--- a/Spieler.html
+++ b/Spieler.html
@@ -15,6 +15,7 @@
             <h1> Die besten Spieler aller Zeiten</h1>
             <br>
             <h3>Die besten Point Guards aller Zeiten</h3>
+            <img src="bilder/magic-johnson-en-apple-tv-2.jpg" alt="Magic Johnson" style="float: right; height: 180px; width: 230px; margin-top: -135px;">
         <ol>
             <li>Magic Johnson ist wahrscheinlich der beste Point Guard jemals mit 5 Championships, 3 MVPs und Passfähigkeiten wie kein Anderer</li>
             <li>Stephen Curry macht Magic den 1. Platz schon streitig mit seinen 4 Championships und 2 MVPs, abgesehen davon, dass er das Spiel mit seinen Wurf-skills revolutionierte</li>
@@ -22,6 +23,7 @@
         </ol> 
         <br>
         <h3>Die besten Shooting Guards aller Zeiten</h3>
+        <img src="bilder/mj.jpg" alt="Michael Jordan" style="float: right; height: 180px; width: 230px; margin-top: -115px;">
         <ol>
             <li>Michael Jordan ist die unangefochtene 1 auf seiner Position und auch für viele der Beste aller Zeiten, dank seiner vielen Erfolge und Leistungen</li>
             <li>Kobe Bryant landet mit seiner legendären Mamba Mentality hinter seinem Idol MJ. Durch seinen langanhaltenden Erfolg mit den Lakers sichert er sich Platz 2</li>
@@ -29,6 +31,7 @@
         </ol>
         <br>
         <h3>Die besten Small-Forwards aller Zeiten</h3>
+        <img src="bilder/lebron.jpg" alt="LeBron James" style="float: right; height: 180px; width: 230px; margin-top: -95px;">
         <ol>
             <li> LeBron James sichert sich Platz 1 mit unzähligen Rekorden in allen möglichen Kategorien und der unglaublichen Langleblichkeit seiner Fähigkeiten</li>
             <li> Larry Bird dominiert die Liste der Small Forwards gleich wie die NBA in den 80er Jahren mit seinen 3 MVPs hintereinander</li>
@@ -36,6 +39,7 @@
         </ol> 
         <br>
         <h3>Die besten Power-Forwards aller Zeiten</h3>
+        <img src="bilder/duncan.jpg" alt="Tim Duncan" style="float: right;height: 160px; width: 220px; margin-top: -75px;">
         <ol>
             <li> Das Mittelstück der langen Spurs-Dynastie Tim Duncan dominierte als einer der besten defensiven Spieler aller Zeiten die NBA für mehrere Jahre</li>
             <li> Dirk Nowitzki revolutionierte das Spiel auf seiner Position und sorgte dafür, dass heutzutage auch Riesen den Ball aus weiter Distanz durch Netz bringen</li>
@@ -43,6 +47,7 @@
         </ol>
         <br>
         <h3>Die besten Centers aller Zeiten</h3>
+         <img src="bilder/kareem.jpg" alt="Kareem Abdul-Jabbar" style="float: right; height: 180px; width: 180px; margin-top: -70px;">
         <ol>
             <li> Kareem Abdul-Jabbar hat mit ganzen 6 MVPs die meisten der Geschichte, noch dazu besaß er bis vor kurzem den Rekord für die meisten Punkte aller Zeiten</li>
             <li> Shaquille O'Neal dominierte seitdem er in der NBA ist. Seine Dominanz reichte für 4 Championships, 1 MVP und sogar ein paar kaputte Körbe</li>
