--- a/Teams.html
+++ b/Teams.html
@@ -4,17 +4,12 @@
     <meta charset="UTF-8">
     <title>Die größten NBA-Teams</title>
     <link rel="stylesheet" href="styles.css">
-    <nav>
-        <ol>
-            <li><a href="index.html">Zurück zur Startseite</a></li>
-            <li><a href="spieler.html">Zu den Spielern</a></li>
-            <li><a href="impressum.html">Zum Impressum</a></li>
-        </ol>
-    </nav>
+    <header>
+        <h1>Die größten NBA-Teams</h1>
+</header>
 </head>
 <body>
-    <h1>Die größten NBA-Teams</h1>
- 
+   
     <h2>Chicago Bulls der 90er</h2>
     <img src="https://th.bing.com/th/id/OIP.iYA9PGvn5TijsRdZKuZmTAHaHb?rs=1&pid=ImgDetMain" alt="Chicago Bulls" height="180" width="200">
     <p>Michael Jordan führte die Bulls zu 6 Titeln in 8 Jahren.</p>
@@ -32,8 +27,17 @@
     <p>Tim Duncan und Coach Popovich führten die Spurs zu 5 Meisterschaften mit Teamgeist und Konstanz.</p>
  
     <h2>Boston Celtics der 60er</h2>
-    <img src="https://th.bing.com/th/id/OIP.zjH6hyCxAAupPEv4uifhpwHaHa?rs=1&pid=ImgDetMain" alt="Boston Celtics" height="180" width="195">
+    <img src="https://th.bing.com/th/id/OIP.zjH6hyCxAAupPEv4uifhpwHaHa?rs=1&pid=ImgDetMain" alt="Boston Celtics" height="180" width="195" float = >
     <p>11 Titel in 13 Jahren – eine der erfolgreichsten Dynastien im Sport.</p>
+<footer>
+    <nav>
+        <ul>
+        <li><a href="index.html">Zurück zur Startseite</a></li>
+     <li><a href="spieler.html">Zu den Spielern</a></li>
+     <li><a href="impressum.html">Zum Impressum</a></li>
+    </ul>
+    </nav>
+</footer>
  
  
 </body>
